# crapchat

./: .gitignore  README.md  WORKSPACE
src/: BUILD.bazel  chatpage.go  chatpage_test.go  main.go
src/chatpage/: BUILD.bazel  chatpage.go  connection_manager.go  message_handler.go  message_router.go  messages.go  request_handler.go
src/chatpage/static/: main.html  main.js  main.ts
