# Copyright 2018 Google Inc.  All rights reserved
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
package(default_visibility = ["//visibility:public"])


load("@bazel_gazelle//:def.bzl", "gazelle")

gazelle(name = "gazelle")

load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library", "go_test")

go_library(
    name = "chatpage",
    srcs = ["chatpage.go"],
		# data = ["client/client.html"],
		data = glob(["static/*"]),
    importpath = "github.com/gnanda/crapchat/chatpage",
		visibility = ["//src:__pkg__"],
		deps = [
				"@org_golang_x_net//websocket:go_default_library",
				":connection_manager",
				":message_handler",
				],
)

go_test(
    name = "chatpage_test",
    srcs = ["chatpage_test.go"],
    importpath = "github.com/gnanda/crapchat/chatpage",
    deps = [
        ":chatpage",
    ],
)

go_library(
    name = "messages",
    srcs = ["messages.go"],
		# data = ["client/client.html"],
		data = glob(["static/*"]),
    importpath = "github.com/gnanda/crapchat/messages",
		visibility = ["//src:__pkg__"],
		deps = [
				"@org_golang_x_net//websocket:go_default_library",
				],
)

go_library(
    name = "message_handler",
    srcs = ["message_handler.go"],
		# data = ["client/client.html"],
		data = glob(["static/*"]),
    importpath = "github.com/gnanda/crapchat/message_handler",
		visibility = ["//src:__pkg__"],
		deps = [
				"@org_golang_x_net//websocket:go_default_library",
				":messages",
				],
)


go_library(
    name = "connection_manager",
    srcs = ["connection_manager.go"],
		# data = ["client/client.html"],
		data = glob(["static/*"]),
    importpath = "github.com/gnanda/crapchat/connection_manager",
		visibility = ["//src:__pkg__"],
		deps = [
				"@org_golang_x_net//websocket:go_default_library",
				],
)
